@@ -1,4 +1,26 @@
-NMreadSim <- function(path){
+##' Read simulation results based on NMsim's track of model runs
+##' @param path Path to the simulation-specific rds file generated by
+##'     NMsim, typically called `NMsim_paths.rds`.
+##' @param as.fun The default is to return data as a data.frame. Pass
+##'     a function (say tibble::as_tibble) in as.fun to convert to
+##'     something else. If data.tables are wanted, use
+##'     as.fun="data.table". The default can be configured using
+##'     NMdataConf.
+##' @return A data set of class defined by as.fun
+##' @export
+
+NMreadSim <- function(path,as.fun){
+
+    . <- NULL
+    ROWMODEL2 <- NULL
+    args.NMscanData <- NULL
+    path.sim.lst <- NULL
+    simres <- NULL
+
+    if(missing(as.fun)) as.fun <- NULL
+    as.fun <- NMdata:::NMdataDecideOption("as.fun",as.fun)
+
+
     ## when to look for combined and saved results?
 
 
@@ -6,12 +28,22 @@ NMreadSim <- function(path){
     
     ## if an rds, just read it
     tab.paths <- readRDS(path)
-    simres <- NMscanMultiple(tab.paths$path.sim.lst)
-
+    
+    ## simres <- NMscanMultiple(tab.paths$path.sim.lst)
+    res <- tab.paths[,{
+        args.NM <- args.NMscanData[[1]]
+        if(! "quiet" %in% names(args.NM)){
+            args.NM$quiet <- TRUE
+        }
+        
+        do.call(NMscanData,c(list(file=path.sim.lst),args.NM))
+    },keyby=.(ROWMODEL2)]
+    return(res)
+    
     ## if an lst, read it
 
     ## the rds table must keep NMscanData arguments
 
 
-    return(simres)
+    return(as.fun(simres))
 }
